--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,7 +13,10 @@
       crossorigin="anonymous"
     />
     <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -28,7 +31,6 @@
       rel="stylesheet"
     />
 
-  
     <!-- My STYLE.CSS -->
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -56,10 +58,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Profile</a>
+              <a class="nav-link" href="#"
+                ><i class="bi bi-person-circle"></i> Profile</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="bi bi-info-circle-fill"></i> About</a>
+              <a class="nav-link" href="#"
+                ><i class="bi bi-info-circle-fill"></i> About</a
+              >
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -74,3 +80,14 @@
         </div>
       </div>
     </nav>
+    <div class="add-button">
+      <button class="btn btn-floating no-btn-lg">
+        <i class="bi bi-house-door-fill"></i>
+      </button>
+      <button type="button" class="btn btn-floating">
+        <i class="bi bi-plus-circle-fill"></i>
+      </button>
+      <button class="btn btn-floating no-btn-lg">
+        <i class="bi bi-person-circle"></i>
+      </button>
+    </div>
