--- a/views/dishinfo.ejs
+++ b/views/dishinfo.ejs
@@ -1,10 +1,10 @@
-<!-- Contains Head, CDNs and NavBar -->
+<!-- Contains Head, CDNs and NavBar Quick access buttons -->
 <%- include('partials/head.ejs') %>
 
 <div class="container">
   <section class="pb-4">
     <h1 class="mb-4"><%= (dish.dish).toUpperCase() %></h1>
-    <div class="d-md-flex flex-wrap justify-content-between">
+    <div class="d-md-flex flex-wrap justify-content-start">
       <div class="row text-center p-1 col-md-4">
         <img
           src="<%= dish.imgURL %> "
