--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
     <div class="container my-4">
       <!-- Dish Display Cards -->
       <section>
-        <div class="row d-flex justify-content-start">
+        <div class="row">
           <% for(let dish of dishes){%>
-          <div class="col-5 card mx-auto my-2 p-0"> 
+          <div class="col-5 card mx-auto mx-md-4 mx-lg-3 my-2 p-0"> 
             <img
               src="<%=dish.imgURL%>"
               alt="<%= dish.dish %>"
