--- a/views/dishinfo.ejs
+++ b/views/dishinfo.ejs
@@ -1,42 +1,63 @@
 <!-- Contains Head, CDNs and NavBar Quick access buttons -->
 <%- include('partials/head.ejs') %>
-
-<div class="container">
-  <section class="pb-4">
-    <h1 class="mb-4"><%= (dish.dish).toUpperCase() %></h1>
-    <div class="d-md-flex flex-wrap justify-content-start">
-      <div class="row text-center p-1 col-md-4">
-        <img
-          src="<%= dish.imgURL %> "
-          alt="<%= dish.dish %> "
-          class="mg-fluid"
-        />
+<div class="container mb-4">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="<%= dish.imgURL %> " alt="<%= dish.dish %>" class="img-fluid" />
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <p class="fw-lighter"><%= dish.restaurant %></p>
       </div>
-      <div>
-        <h2>$<%= dish.price %></h2>
-        <h3><%= dish.restaurant %></h3>
-        <p class="fw-light">
-          <i class="bi bi-geo-alt"></i><%= dish.address %>,<br />
-          <%= dish.city %>, <%= dish.province %> <%= dish.country %> <br />
-          <%= dish.postalCode %> <br />
-          <a href="<%= dish.websites %>" target="_blank"> Website </a>
+      <div class="row">
+        <div class="col-10">
+          <h1><%= (dish.dish).toUpperCase() %></h1>
+        </div>
+        <div class="col-2">
+          <form action="/home/<%= dish._id %>/edit" method="get">
+            <button type="submit" class="btn btn-outline-success edit" title="Edit">
+              <i class="bi bi-pencil-square"></i>
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col mb-2">
+          <h6>Price: $<%= dish.price %></h6>
+        </div>
+      </div>
+      <div class="row">
+        <h5>Location</h5>
+        <p>
+          <span class="d-block"><%= dish.address %>,</span>
+          <span class="d-block"
+            ><%= dish.city %>, <%= dish.province %> <%= dish.country %></span
+          >
+          <span class="d-block"><%= dish.postalCode %></span>
+          <a href="<%= dish.websites %>" target="_blank">Website</a>
         </p>
       </div>
-  </section>
-  <section class="mb-4 ">
-    <hr>
-    <div class="row">
-        <div class="py-sm-3 col-lg-4">
-            <h4>Categories</h4>
-            <div class="hstack gap-3 d-flex flex-wrap">
-              <% for(let category of dish.category) {%>
-              <div class="row border rounded  mx-1 categories">
-                <div><%= category %></div>
-              </div>
-              <% } %>
-            </div>
+      <div class="row">
+        <hr>
+        <h5>Description</h5>
+            <% if(dish.description){ %>
+                <p class="fw-light"><%= dish.description %> </p>
+              <% } else{ %>  
+                <p>N/A</p>
+             <% } %>
+        </p>
+      </div>
+      <div class="row">
+        <hr>
+        <h5 class="mb-3">Tags</h5>
+        <div class="hstack gap-3 d-flex flex-wrap">
+          <% for(let category of dish.category) {%>
+          <div class="row border rounded mx-1 categories">
+            <div><%= category %></div>
           </div>
+          <% } %>
         </div>
+      </div>
     </div>
-  </section>
+  </div>
 </div>
