--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,6 +12,12 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
@@ -93,24 +99,15 @@
       </nav>
     </section>
 
-    <!-- Quick Access Buttons Mainly for Cellphones -->
+    <!-- Quick Add Button -->
 
     <section>
       <div class="add-button">
-        <form action="/home" method="get">
-          <button class="btn btn-floating no-btn-lg" type="submit">
-            <i class="bi bi-house-door-fill"></i>
-          </button>
-        </form>
         <form action="/home/add" method="get">
           <button type="submit" class="btn btn-floating">
             <i class="bi bi-plus-circle-fill"></i>
           </button>
         </form>
-        <form action="" method="get">
-          <button class="btn btn-floating no-btn-lg">
-            <i class="bi bi-person-circle"></i>
-          </button>
-        </form>
       </div>
     </section>
+  
