--- a/views/error.ejs
+++ b/views/error.ejs
@@ -24,10 +24,10 @@
     <div
       class="container d-flex flex-column vh-100 justify-content-center align-items-center"
     >
-      <h1 style="font-size: 8rem">Error: <%= status %></h1>
+      <h1 style="font-size: 8rem; color: #ff6e6c;">Error: <%= status %></h1>
       <p class="text-muted"><%= message %></p>
       <form action="/home" method="get">
-        <button type="submit" class="btn btn-dark">Take me back to Home</button>
+        <button type="submit" class="btn btn-primary">Take me back to Home</button>
       </form>
     </div>
   </body>
