--- a/views/dishinfo.ejs
+++ b/views/dishinfo.ejs
@@ -47,7 +47,7 @@
              <% } %>
         </p>
       </div>
-      <div class="row">
+      <div class="row mb-3">
         <hr>
         <h5 class="mb-3">Tags</h5>
         <div class="hstack gap-3 d-flex flex-wrap">
@@ -58,6 +58,30 @@
           <% } %>
         </div>
       </div>
+    </div>
+    <div class="row">
+    <hr>
+      <!-- Form for review -->
+      <form action="/home/<%=dish._id%>/review" method="post" class="mb-3 mt-3">
+        <h5 class="mb-3"> Leave a Review</h5>
+        <div class="form-group d-flex justify-content-between">
+          <label for="rating"> Rate Your Experience:</label>
+          <select class="form-control w-25" id="rating">
+            <option value="1">1 - Bad</option>
+            <option value="2">2 - Okay</option>
+            <option value="3">3 - Good</option>
+            <option value="4">4 - Very Good</option>
+            <option value="5" selected>5 - Excellent</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="comment" class="mb-1">Share Your Experience:</label>
+          <textarea class="form-control" id="exampleFormControlTextarea4" rows="3"></textarea>
+        </div>
+        <div class="mt-3">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
