--- a/views/dishinfo.ejs
+++ b/views/dishinfo.ejs
@@ -62,11 +62,11 @@
     <div class="row">
     <hr>
       <!-- Form for review -->
-      <form action="/home/<%=dish._id%>/review" method="post" class="mb-3 mt-3">
+      <form action="/home/<%=dish._id%>/review" method="post" class="mb-3 mt-3 needs-validation" novalidate>
         <h5 class="mb-3"> Leave a Review</h5>
         <div class="form-group d-flex justify-content-between">
-          <label for="rating"> Rate Your Experience:</label>
-          <select class="form-control w-25" id="rating">
+          <label for="rating"> How would you rate your experience?</label>
+          <select class="form-control w-25" id="rating" name="rating" required>
             <option value="1">1 - Bad</option>
             <option value="2">2 - Okay</option>
             <option value="3">3 - Good</option>
@@ -75,8 +75,14 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="comment" class="mb-1">Share Your Experience:</label>
-          <textarea class="form-control" id="exampleFormControlTextarea4" rows="3"></textarea>
+          <label for="comment" class="mb-1">Describe how delicious <%= dish.dish %> was: </label>
+          <textarea class="form-control" id="comment" rows="3" name="comment" required></textarea>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Please share your experience.
+          </div>
         </div>
         <div class="mt-3">
           <button class="btn btn-primary" type="submit">Submit</button>
@@ -85,3 +91,47 @@
     </div>
   </div>
 </div>
+<hr>
+<%if(dish.reviews.length){%>
+  <section id="review-section" class="my-3">
+    <div class="review-head">
+      <h2 class="p-3">Reviews</h2>
+    </div>
+    <div class="container my-3">
+    </div>
+    <div class="d-flex flex-wrap justify-content-center">
+      <% for(review of dish.reviews){ %>
+        <div class ="review-card m-2 p-2 w-75">
+          <div class="review-header p-2">
+            <%= star[review.rating] %> 
+          </div>
+          <div class="review-body p-2">
+            <%= review.comment %> 
+          <footer class="blockquote-footer mt-2"> <%= review.date %> </footer>
+          </div>
+        </div>
+       <%}%>
+    </div>
+  </section>
+<%}%>
+
+<!-- Client Side Validation for Reviews Form -->
+<script>
+  (function () {
+  'use strict'
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+</script>
