--- a/views/error.ejs
+++ b/views/error.ejs
@@ -26,7 +26,7 @@
     >
       <h1 style="font-size: 8rem; color: #ff6e6c;">Error: <%= status %></h1>
       <p class="text-muted"><%= message %></p>
-      <form action="/home" method="get">
+      <form action="/foodBucket" method="get">
         <button type="submit" class="btn btn-primary">Take me back to Home</button>
       </form>
     </div>
