--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                   ><%= `${dish.city}, ${dish.country}` %></span
                 >
               </p>
-              <form action="/home/<%=dish.id%>" method="get">
+              <form action="/foodBucket/<%=dish.id%>" method="get">
                 <button class="btn btn-primary px-3" type="submit">More</button>
               </form>
             </div>
