--- a/views/new-dish.ejs
+++ b/views/new-dish.ejs
@@ -3,7 +3,7 @@
     <!-- Form for adding new dish to db.foodBucket.buckets  -->
     <div class="container" style="height: 100vh">
       <section class="d-flex justify-content-center">
-        <form class="row g-3 needs-validation w-75 pb-4" novalidate method="POST" action="/home">
+        <form class="row g-3 needs-validation w-75 pb-4" novalidate method="POST" action="/foodBucket">
 
             <!-- dish name -->
            <div class="col-md-5">
