--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -54,7 +54,7 @@
     <section>
       <nav class="navbar navbar-expand-lg mb-4 d-flex justify-content-around">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/home"
+          <a class="navbar-brand" href="/foodBucket"
             ><img
               src="/img/foodBucket-Logo.png"
               class="mx-2"
@@ -103,7 +103,7 @@
 
     <section>
       <div class="add-button">
-        <form action="/home/add" method="get">
+        <form action="/foodBucket/add" method="get">
           <button type="submit" class="btn btn-floating">
             <i class="bi bi-plus-circle-fill"></i>
           </button>
