Restructured express routes for reviews

--- a/views/dishinfo.ejs
+++ b/views/dishinfo.ejs
@@ -62,7 +62,7 @@
     <div class="row">
     <hr>
       <!-- Form for review -->
-      <form action="/foodBucket/<%=dish._id%>/review" method="post" class="mb-3 mt-3 needs-validation" novalidate>
+      <form action="/foodBucket/<%=dish._id%>/reviews" method="post" class="mb-3 mt-3 needs-validation" novalidate>
         <h5 class="mb-3"> Leave a Review</h5>
         <div class="form-group d-flex justify-content-between">
           <label for="rating"> How would you rate your experience?</label>
